[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tiles/Belts/Flow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tiles/Belts/tconveyor.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Belts/TBeltTile.gd" type="Script" id=3]
[ext_resource path="res://Tiles/Belts/BaseConveyorTile.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FlowDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=2]
resource_name = "FlowRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "FlowTop"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[node name="TBeltTile" instance=ExtResource( 4 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
vframes = 3
frame = 14

[node name="AnimationPlayer" parent="." index="1"]
anims/FlowDown = SubResource( 1 )
anims/FlowRight = SubResource( 2 )
anims/FlowTop = SubResource( 3 )

[node name="ValidArea" parent="." index="3"]
polygon = PoolVector2Array( -2, -4, 2, -4, 2, -2, 4, -2, 4, 2, 2, 2, 2, 4, -2, 4 )

[node name="Flow" parent="." index="4" instance=ExtResource( 1 )]

[node name="FlowArea" parent="Flow" index="0"]
polygon = PoolVector2Array( -2, 0.909091, 2, -0.909091, 4, -0.909091, 4, 2.72727, 2, 2.72727 )

[node name="Flow2" parent="." index="5" instance=ExtResource( 1 )]
rotation = 1.5708

[node name="FlowArea" parent="Flow2" index="0"]
polygon = PoolVector2Array( -4, 2.72727, -4, -0.909091, -2, -0.909091, 8.74228e-08, 2.72727, -4, 2.72727 )

[node name="Flow3" parent="." index="6" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="FlowArea" parent="Flow3" index="0"]
polygon = PoolVector2Array( -4, -0.909091, 8.74228e-08, -0.909091, -2, 2.72727, -4, 2.72727 )

[editable path="Flow"]

[editable path="Flow2"]

[editable path="Flow3"]
